--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ travis-ci = { repository = "HEnquist/lib-rust-oggvorbis-meta" }
 lewton = "0.9.4"
 byteorder = "1.3.2"
 ogg = "0.7"
+thiserror = "1.0.63"
 
 [lints.clippy.pedantic]
 level = "warn"
@@ -27,3 +28,4 @@ priority = -1
 [lints.clippy]
 # emporary until i start using Result
 missing_panics_doc = "allow"
+missing_errors_doc = "allow"
